--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.1000.0",
     "@calcom/embed-react": "^1.5.3",
     "gsap": "^3.14.2",
     "motion": "^12.34.3",
