--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.14.2",
     "motion": "^12.34.3",
     "next": "^14.2.0",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.3"
