--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.1000.0",
+    "@aws-sdk/s3-request-presigner": "^3.1000.0",
     "@calcom/embed-react": "^1.5.3",
     "gsap": "^3.14.2",
     "motion": "^12.34.3",
