--- a/data/projects.json
+++ b/data/projects.json
@@ -6,5 +6,13 @@
     "client": "",
     "video": "/NSX.mp4",
     "isRecent": true
+  },
+  {
+    "id": "Romulus.mp4",
+    "title": "Romulus",
+    "category": "Ads",
+    "client": "",
+    "video": "/api/videos/Romulus.mp4",
+    "isRecent": true
   }
 ]
