--- a/data/projects.json
+++ b/data/projects.json
@@ -5,8 +5,7 @@
     "category": "Ads",
     "client": "",
     "video": "/NSX.mp4",
-    "isRecent": true,
-    "isFeatured": false
+    "isRecent": true
   },
   {
     "id": "Romulus.mp4",
@@ -14,7 +13,6 @@
     "category": "Ads",
     "client": "",
     "video": "/api/videos/Romulus.mp4",
-    "isRecent": true,
-    "isFeatured": false
+    "isRecent": true
   }
 ]
