recent project fix

--- a/data/projects.json
+++ b/data/projects.json
@@ -13,6 +13,6 @@
     "category": "Ads",
     "client": "",
     "video": "/api/videos/Romulus.mp4",
-    "isRecent": true
+    "isRecent": false
   }
 ]
